--- a/.classpath
+++ b/.classpath
@@ -2,14 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Peter/Documents/Java Libraries/google-gson-2.2.2/gson-2.2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Peter/Documents/Java Libraries/google-gson-2.2.2/gson-2.2.2-javadoc.jar">
+	<classpathentry kind="lib" path="C:/Users/Peter/Documents/Java Libraries/gson-2.2.4.jar" sourcepath="C:/Users/Peter/Documents/Java Libraries/gson-2.2.4-sources.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/C:/Users/Peter/Documents/Java%20Libraries/google-gson-2.2.2/gson-2.2.2-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="jar:file:/C:/Users/Peter/Documents/Java%20Libraries/gson-2.2.4-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Peter/Documents/Java Libraries/google-gson-2.2.2/gson-2.2.2-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Peter/Documents/Java Libraries/swt/swt.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Peter/Documents/Java Libraries/swt/swt-debug.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
